--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,17 @@
 h1{
     color: rgb(196, 6, 6);
     background-color: aliceblue;
+    padding: 12px;
+    margin: 0px;
 }
 
 .cont {
     justify-content: center;
     background-color: rgb(217, 233, 247);
+    padding: 12px;
+}
+
+#container {
+    margin: 16px 128px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
